# mislabeled

./: .coveragerc  .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE.md  Makefile  README.md  README.rst  appveyor.yml  datasets-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-requirements.txt
.github/workflows/: main.yml  test.yml
benchmark/: analysis.ipynb  autocommit.py  benchmark.py  moons.py  run.py
benchmarks/: test_hessians.py
doc/: api.rst  conf.py  quick_start.rst
docs/: api.rst  conf.py  docs-requirements.txt  index.rst
examples/: housing_display.py  moons_ground_truth.py  plot_aum.ipynb  plot_aum.py  plot_classifier.py  plot_custom_staged_fit.ipynb  plot_custom_staged_fit.py  plot_gmm.ipynb  plot_gmm.py  plot_handlers.py  plot_housing.ipynb  plot_housing.py  plot_influence_mlp.ipynb  plot_linearized.ipynb  plot_linearized.py  plot_moons_ground_truth.ipynb  plot_moons_ground_truth.py  plot_noisy_val.ipynb  plot_noisy_val.py  plot_ntk.ipynb  plot_outliers.ipynb  plot_outliers.py  plot_representer.ipynb  plot_representer.py  plot_sms.ipynb  plot_template.py  plot_toy_ground_truth.ipynb  plot_transformer.py  plot_vog.ipynb  plot_vog.py
mislabeled/: __init__.py  aggregators.py  detect.py  detectv2.py  filtering.py  kernel.py  preprocessing.py  utils.py
mislabeled/aggregate/: __init__.py  aggregate.py  aggregators.py  utils.py
mislabeled/datasets/: cifar_n.py  toy.py  weasel.py  west_african_languages.py  wrench.py
mislabeled/detect/: __init__.py  _classifier.py  _complexity.py  _consensus.py  _density_ratio.py  _dynamic.py  _influence.py  _input_sensitivity.py  _model_based.py  _outlier.py  aggregators.py  aum.py  base.py  classifier.py  consensus.py  density_ratio.py  detectors.py  influence.py  input_sensitivity.py  outlier.py  utils.py
mislabeled/ensemble/: __init__.py  _base.py  _independent.py  _no_ensemble.py  _none.py  _outlier.py  _progressive.py  _single.py  calibration.py
mislabeled/handle/: __init__.py  _base.py  _biquality.py  _filter.py  _semi_supervised.py
mislabeled/plugins/: _mislabeled_only.py
mislabeled/probe/: __init__.py  _adjust.py  _complexity.py  _confidence.py  _entropy.py  _fisher.py  _grads.py  _influence.py  _linear.py  _margin.py  _minmax.py  _mlp.py  _outlier.py  _peer.py  _regression.py  _scorer.py  _sensitivity.py  _tree.py  _weight.py  utils.py
mislabeled/split/: __init__.py  _base.py  _gmm.py  _multiclass.py  _quantile.py  _threshold.py
mislabeled/splitters/: __init__.py  _base.py  _gmm.py  _multiclass.py  _quantile.py  _threshold.py
mislabeled/tests/: test_cache.py  test_common.py  test_detect.py  test_detect_slow.py  test_detectv2.py  test_multiple_detectors.py  test_preprocessing.py  test_probes.py  test_sklearn_api.py  test_template.py  test_uncertainties.py  utils.py
mislabeled/uncertainties/: __init__.py  _adjust.py  _confidence.py  _entropy.py  _margin.py  _qualifier.py  _regression.py  _scorer.py  _sensitivity.py  _weight.py  utils.py
tests/: test_cache.py  test_calibrated_ensemble.py  test_detect.py  test_detect_regression.py  test_detect_slow.py  test_kernel.py  test_multiple_detectors.py  test_neural_features.py  test_preprocessing.py  test_progressive_ensemble.py  test_sklearn_api.py  test_split_multiclass.py  test_tree_features.py  utils.py
tests/datasets/: test_toy.py  test_west_african_languages.py  test_wrench.py
tests/probe/: test_adjust.py  test_complexity.py  test_cross_entropy.py  (+5 more)
(+37 files in other folders)
