[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mislabeled"
dynamic = ["version"]
description = "detect mislabeled examples in machine learning datasets"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Thomas George", email = "thomas.george@orange.com"},
  { name = "Pierre Nodet", email = "pierre.nodet@orange.com" },
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn<1.7.0",
]

[project.optional-dependencies]
datasets = ["pooch", "pandas"]
examples = ["mislabeled[datasets]", "matplotlib"]

[project.urls]
Documentation = "https://github.com/orange-opensource/mislabeled#readme"
Issues = "https://github.com/orange-opensource/mislabeled/issues"
Source = "https://github.com/orange-opensource/mislabeled"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
addopts = ["--ignore=tests/datasets", "--ignore=tests/test_cache.py"]

[dependency-groups]
dev=[
  "mislabeled[examples]",
  "ipykernel",
  "pytest", 
  "pytest-cov", 
  "pytest-xdist",
  "pytest-benchmark",
  "scipy>=1.15.0",
  "statsmodels",
]

[tool.coverage.run]
omit = ["tests"]
source = ["mislabeled"]

[tool.ruff]
exclude = ["examples"]

[tool.ruff.lint]
preview = true
select = ["E", "F", "W", "I"]